--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,18 @@
     <!-- You'll need to mess around with the CSS of #camera (found in css/style.css) to get it to work.
         More explanation in that CSS rule. -->
     <article>
-        <div id="camera"><h1>Hatch Panel</h1></div>
-        <div id="camera2"><h1>Cargo</h1></div>
+        <div id="camera">
+            <svg>
+                <rect x="75" y="0" rx="5" ry="5" width="150" height="30" style="fill:grey;stroke:grey;stroke-width:1;opacity:0.5" />></rect>
+                <text id="team" x="150" y="25" text-anchor="middle">Hatch</text>
+            </svg>
+        </div>
+        <div id="camera2">
+            <svg>
+                <rect x="75" y="0" rx="5" ry="5" width="150" height="30" style="fill:grey;stroke:grey;stroke-width:1;opacity:0.5" />></rect>
+                <text id="team" x="150" y="25" text-anchor="middle">Cargo</text>
+            </svg>       
+        </div>
     </article>
     <!-- The main body of the dashboard, by default contains the gyro monitor and the robot diagram -->
    
