--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,13 @@
     <article>
         <div id="camera">
             <svg>
-                <rect x="75" y="0" rx="5" ry="5" width="150" height="30" style="fill:grey;stroke:grey;stroke-width:1;opacity:0.5" />></rect>
+                <rect x="75" y="0" rx="5" ry="5" width="150" height="30" style="fill:grey;stroke:grey;stroke-width:1;opacity:0.75" />></rect>
                 <text id="team" x="150" y="25" text-anchor="middle">Hatch</text>
             </svg>
         </div>
         <div id="camera2">
             <svg>
-                <rect x="75" y="0" rx="5" ry="5" width="150" height="30" style="fill:grey;stroke:grey;stroke-width:1;opacity:0.5" />></rect>
+                <rect x="75" y="0" rx="5" ry="5" width="150" height="30" style="fill:grey;stroke:grey;stroke-width:1;opacity:0.75" />></rect>
                 <text id="team" x="150" y="25" text-anchor="middle">Cargo</text>
             </svg>       
         </div>
@@ -55,6 +55,7 @@
     <script src="networktables/networktables.js"></script>
     <script src="connection.js"></script>
     <script src="ui.js"></script>
+    <script src="components/multicamera.js"></script>
 </body>
 
 </html>
